--- a/css/proyectofinal.css
+++ b/css/proyectofinal.css
@@ -95,7 +95,8 @@
   bottom: 0;
   width: 100%;
   height: 60px;
-  background: white; }
+  background: white;
+  padding-top: 0px; }
 
 /*TEXTOS*/
 /*ARREGLAR FOOTER INSTRUCTORES*/
@@ -276,7 +277,11 @@ ul li {
 /*La grilla se aplica a la tabla*/
 #grilla {
   display: grid;
-  grid-template-areas: "header"	 "filaUno " "filaDos" "filaTres" "filaCuatro";
+  grid-template-areas: "header"	
+ "filaUno "
+ "filaDos"
+ "filaTres"
+ "filaCuatro";
   grid-template-columns: 1, 50% fr;
   grid-template-rows: 20% 20% 20% 20% 20%;
   grid-gap: 0;
