--- a/scss/_banners.scss
+++ b/scss/_banners.scss
@@ -1,9 +1,11 @@
 /*BANNERS*/
 
 .banner{
+	height: 5%;
 	font-family: 'Noto Sans JP', sans-serif;
 	font-size: 30px;
-	background:  radial-gradient(gray, black);
+	
+	/*background:  radial-gradient(gray, black);*/
 	color: goldenrod;
 	text-align: center;
 	text-transform: uppercase;
