--- a/scss/imagenes.scss
+++ b/scss/imagenes.scss
@@ -6,24 +6,36 @@
     align-content: center;
 }
 
+
+
 .informacionImg{
 display: block;
-max-width: 200%;
+max-width: 100%;
 max-height: 100%;
-transition: 5s;
+transition: 2s;
 }
 .informacionImg:hover{
     transform: scale(1.5);
-   
-    .overlay {
-        width:100%;
-        height:100%;
-        position:absolute;
-        background-color:#000;
-        opacity:0.5;
-        border-radius:30px;
-    }
+    opacity: 1;
 }
+/*.informacionImg:hover.overlay{
+     
+        opacity: 1;
+      
+}
+.overlay {
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    height: 100%;
+    width: 100%;
+    opacity: 0;
+    transition: .5s ease;
+    background-color: #008CBA;
+  }*/
+
 .estudiantesImg{
    @extend.informacionImg;
 }
