--- a/scss/_textos.scss
+++ b/scss/_textos.scss
@@ -95,3 +95,48 @@ margin-bottom: 20px;
 	color: goldenrod;
 	text-align: center; /* Recordar que página de instructores se va a ver  completamente diferente.*/
 }
+
+.iframeMain{
+	width:100% ;
+	height: 100%;
+}
+
+.textoIframe{
+	padding-top: 10rem;
+}
+
+.cintoBlanco{
+	color: white;
+}
+
+.cintoAmarillo{
+	color:yellow
+}
+
+.cintoVerde{
+	color: green;
+}
+
+.cintoAzul{
+	color: blue;
+}
+
+.cintoRojo{
+	color: red;
+}
+
+.cintoNegro{
+	color: black;
+}
+
+.cintoNegroII{
+	color:brown
+}
+
+.cintoNegroIII{
+	color:silver
+}
+
+.sasonim{
+	color: gold;
+}
