--- a/css/proyectofinal.css
+++ b/css/proyectofinal.css
@@ -178,6 +178,40 @@ p, #nosotros--carousel p {
   text-align: center;
   /* Recordar que página de instructores se va a ver  completamente diferente.*/ }
 
+.iframeMain {
+  width: 100%;
+  height: 100%; }
+
+.textoIframe {
+  padding-top: 10rem; }
+
+.cintoBlanco {
+  color: white; }
+
+.cintoAmarillo {
+  color: yellow; }
+
+.cintoVerde {
+  color: green; }
+
+.cintoAzul {
+  color: blue; }
+
+.cintoRojo {
+  color: red; }
+
+.cintoNegro {
+  color: black; }
+
+.cintoNegroII {
+  color: brown; }
+
+.cintoNegroIII {
+  color: silver; }
+
+.sasonim {
+  color: gold; }
+
 /*LISTAS*/
 .oLista {
   color: #9ECE9A;
@@ -211,6 +245,7 @@ ul li {
   z-index: 100; }
 
 .navMain, .navEstudiantes {
+  padding-top: 2rem;
   background-color: blue;
   height: 5em; }
 
@@ -227,7 +262,7 @@ ul li {
 .botones {
   background-color: #074F57;
   text-align: center;
-  padding: 20px;
+  padding: none;
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -428,20 +463,5 @@ label {
   transform: scale(1.5);
   opacity: 1; }
 
-/*.informacionImg:hover.overlay{
-     
-        opacity: 1;
-      
-}
-.overlay {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    height: 100%;
-    width: 100%;
-    opacity: 0;
-    transition: .5s ease;
-    background-color: #008CBA;
-  }*/
+.imagenChoi {
+  align-content: center; }
