--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -1,26 +1,8 @@
 /*FOOTERS*/
-#footer{
-	font-family: 'Noto Sans JP', sans-serif;
-	font-size: 30px;
-	height:8rem;
-	background: radial-gradient(gray, black);
-	color: goldenrod;
-	text-align: center;
-	text-transform: uppercase;
-	text-decoration: none;
-	padding: 20px;
-	display: flex;
-	flex-direction: row;
-	flex-wrap: wrap;
-	justify-content: space-evenly;
-	align-content: center;
-	padding-top: 10em;
-}
 
-#footer a{
-	text-decoration: none;
-	color: darkgoldenrod;
-}
+
+
+
 
 #footerEnDanes{
 	font-family: 'Noto Sans JP', sans-serif;
@@ -50,12 +32,19 @@
 	flex-wrap: wrap;
 	flex-flow: row;
 	align-items: space-evenly;
-	background-color: black;
-	color: darkgoldenrod;
+	background-color: #071E22;
+	color: #247BA0;
 	padding-top: 10px;
 	padding-bottom:10px;
 
 }
+.nuevoFooter a{
+	text-decoration: none;
+	color: #247BA0;
+	font-family: 'Noto Sans JP', sans-serif;
+}
+
+
 
 .nuevoFooterDanes{
 	@extend.nuevoFooter;
@@ -63,6 +52,6 @@
   	bottom:0;
  	width:100%;
   	height:60px;   
-   	background:white;
+   	background: #F6F7EB;
    	padding-top:0px;
 }
