Iframes en Estudiantes en proceso, agregar imágenes, y ya está

--- a/css/proyectofinal.css
+++ b/css/proyectofinal.css
@@ -133,7 +133,7 @@ a {
   background-color: black;
   color: darkgoldenrod; }
 
-.subtitulos {
+.subtitulos, .underTitulos {
   font-family: 'Noto Sans JP', sans-serif;
   color: #74A57F;
   margin-left: 10px;
@@ -201,7 +201,7 @@ a {
   font-weight: 200;
   font-family: 'Noto Sans JP', sans-serif;
   text-align: left;
-  margin-left: 25px; }
+  margin-left: 5em; }
 
 ul li {
   color: #9ECE9A;
@@ -209,7 +209,7 @@ ul li {
   font-family: 'Noto Sans JP', sans-serif;
   text-align: left;
   text-decoration: none;
-  margin-left: 25px; }
+  margin-left: 5em; }
 
 /*BOTONES*/
 .iconoFacebook {
