--- a/scss/_listas.scss
+++ b/scss/_listas.scss
@@ -5,7 +5,7 @@
 	font-weight: 200;
 	font-family: 'Noto Sans JP', sans-serif;
 	text-align: left;	
-	margin-left: 25px; 
+	margin-left: 5em; 
 }
 
 ul li{
@@ -14,5 +14,5 @@ ul li{
 	font-family: 'Noto Sans JP', sans-serif ;
 	text-align: left;
 	text-decoration: none;
-	margin-left: 25px;
+	margin-left: 5em;
 }
