Iframes arreglados, faltan imágenes y nuevo landing

--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -32,7 +32,7 @@
 
 .nuevoFooter{
   font-size: 25px;
-  display: none;
+  display: block;
   flex-wrap: wrap;
   flex-flow: row;
   align-items: space-evenly;
