--- a/css/proyectofinal.css
+++ b/css/proyectofinal.css
@@ -120,7 +120,7 @@ p, #nosotros--carousel p {
   margin-bottom: 20px; }
 
 a {
-  text-decoration: none; }
+  text-decoration: none !important; }
 
 .linksEstudiantes {
   text-decoration: none;
@@ -300,9 +300,12 @@ ul li {
 /*TABLAS*/
 .tabla {
   background-color: #074F57;
+  display: flex;
   font-family: 'Mukta', sans-serif;
-  width: 80vh;
-  height: 50vh;
+  width: 100%;
+  height: 25%;
+  flex-flow: row;
+  align-content: space-evenly;
   color: #9ECE9A;
   font-size: 20px;
   border: 2px solid goldenrod;
@@ -377,7 +380,7 @@ label {
     transition: 5seg; }
   .nuevoFooter, .nuevoFooterDanes {
     font-size: 25px;
-    display: none;
+    display: block;
     flex-wrap: wrap;
     flex-flow: row;
     align-items: space-evenly;
@@ -451,6 +454,19 @@ label {
 
 .imagenChoi {
   align-content: center; }
+
+.iframe-container {
+  position: relative;
+  width: 100%;
+  padding-bottom: 56.25%;
+  height: 0; }
+
+.iframe-container iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%; }
 
 .fondoNuevo {
   width: 100rem;
