--- a/scss/_tablas.scss
+++ b/scss/_tablas.scss
@@ -1,9 +1,13 @@
 /*TABLAS*/
 .tabla{
 	background-color: #074F57 ;
+	display: flex;
 	font-family: 'Mukta', sans-serif;
-	width: 80vh;
-	height: 50vh;
+	width: 100%;
+	height: 25%;
+	flex-flow: row;
+	align-content: space-evenly;
+	
 	color: #9ECE9A ;
 	font-size: 20px;
 	border: 2px solid goldenrod;
