--- a/scss/_textos.scss
+++ b/scss/_textos.scss
@@ -42,7 +42,7 @@ margin-bottom: 20px;
 }
 
 a{
-	text-decoration: none;
+	text-decoration: none !important;
 }
 .linksEstudiantes{
 	text-decoration: none;
