Tablas arregladas, falta responsive

--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -73,6 +73,19 @@
   justify-content: space-evenly;
   align-content: center;
 }
-
-
 }
+
+// .mapaResponsive{
+//   overflow: hidden;
+//   padding-bottom: 56,25%;
+//   position: relative;
+//   height: 0;
+// }
+
+// .mapaResponsive iframe{
+//   left: 0;
+//   top: 0;
+//   height: 75%;
+//   width: 75%;
+//   position: absolute;}
+// }
