--- a/css/proyectofinal.css
+++ b/css/proyectofinal.css
@@ -298,31 +298,46 @@ ul li {
   text-decoration: none; }
 
 /*TABLAS*/
-.tabla {
-  background-color: #074F57;
-  display: flex;
-  font-family: 'Mukta', sans-serif;
-  width: 100%;
-  height: 25%;
-  flex-flow: row;
-  align-content: space-evenly;
-  color: #9ECE9A;
-  font-size: 20px;
-  border: 2px solid goldenrod;
-  padding: 8px;
-  border-spacing: 10px; }
+/*.tabla{
+	background-color: #074F57 ;
+	display: block;
+	flex-flow: row;
+	align-content: space-evenly;
+	font-family: 'Mukta', sans-serif;
+	width: 100%;
+	height: 25%;
+	border-collapse: collapse;	
+	color: #9ECE9A ;
+	font-size: 75%;
+	border: 2px solid goldenrod;
+	padding: 8px;
+	
+}
 
+th{
+	width: 100%;
+	background-color:  #071E22;
+	color:#074F57
+}
 /*La grilla se aplica a la tabla*/
 #grilla {
   display: grid;
-  grid-template-areas: "header"	 "filaUno " "filaDos" "filaTres" "filaCuatro";
-  grid-template-columns: 1, 50% fr;
-  grid-template-rows: 20% 20% 20% 20% 20%;
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(2, 2fr);
   grid-gap: 0;
-  justify-items: stretch;
-  align-items: start;
-  justify-content: stretch;
-  align-content: start; }
+  border-top: 1px solid #9ECE9A;
+  border-right: 1px solid #9ECE9A;
+  font-family: 'Mukta', sans-serif; }
+
+#grilla span {
+  padding: 8px 4px;
+  border-left: 3px solid #9ECE9A;
+  border-bottom: 3px solid #9ECE9A;
+  color: #ffb700; }
+
+.grillaTop {
+  background-color: #071E22;
+  color: #074F57; }
 
 /*FORMULARIOS*/
 form input, select, textarea {
