--- a/css/proyectofinal.css
+++ b/css/proyectofinal.css
@@ -483,6 +483,19 @@ label {
   width: 100%;
   height: 100%; }
 
+.mapaResponsive {
+  overflow: hidden;
+  padding-bottom: 56,25%;
+  position: relative;
+  height: 0; }
+
+.mapaResponsive iframe {
+  left: 0;
+  top: 0;
+  height: 75%;
+  width: 75%;
+  position: absolute; }
+
 .fondoNuevo {
   width: 100rem;
   height: 100rem;
