--- a/scss/_imagenes.scss
+++ b/scss/_imagenes.scss
@@ -50,3 +50,17 @@ transition: 2s;
     width: 100%;
     height: 100%;
 }
+.mapaResponsive{
+    overflow: hidden;
+    padding-bottom: 56,25%;
+    position: relative;
+    height: 0;
+  }
+  
+  .mapaResponsive iframe{
+    left: 0;
+    top: 0;
+    height: 75%;
+    width: 75%;
+    position: absolute;
+}
