--- a/scss/_botones.scss
+++ b/scss/_botones.scss
@@ -67,7 +67,7 @@
 .botonComun{
 	background-color: #077187;
 	border: none;
-	color: black;
+	color: darkgoldenrod;
 	padding: 15px 32px;
 	text-align: center;
 	text-decoration: none;
