--- a/scss/_formularios.scss
+++ b/scss/_formularios.scss
@@ -4,8 +4,11 @@ form input, select, textarea{
 	margin-top: 10px;
 	margin-left: 25px;
 	padding: 2px;
+	
 }
-
+.formContacto{
+	padding-bottom: 20 px;
+}
 #checkBoxLegales label{
 	font-family: 'Mukta', sans-serif;
 	font-size:  20px;
