--- a/scss/_listas.scss
+++ b/scss/_listas.scss
@@ -16,3 +16,19 @@ ul li{
 	text-decoration: none;
 	margin-left: 5em;
 }
+
+.oListaCintos{
+	color: #062204;
+	font-weight: 200;
+	font-family: 'Noto Sans JP', sans-serif;
+	text-align: left;	
+	margin-left: 5em; 
+}
+
+.uListaCintos{
+	color: #000000;
+	font-weight: 200;
+	font-family: 'Noto Sans JP', sans-serif;
+	text-align: left;	
+	margin-left: 5em; 
+}
