--- a/scss/_tablas.scss
+++ b/scss/_tablas.scss
@@ -1,5 +1,5 @@
 /*TABLAS*/
-/*.tabla{
+.tabla{
 	background-color: #074F57 ;
 	display: block;
 	flex-flow: row;
@@ -15,7 +15,7 @@
 	
 }
 
-th{
+.thResponsive{
 	width: 100%;
 	background-color:  #071E22;
 	color:#074F57
