--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -36,7 +36,7 @@
 	color: #247BA0;
 	padding-top: 10px;
 	padding-bottom:10px;
-
+	
 }
 .nuevoFooter a{
 	text-decoration: none;
@@ -45,13 +45,11 @@
 }
 
 
+.footerDanes{
+	
+   	padding-top:100px;
+}
 
-.nuevoFooterDanes{
-	@extend.nuevoFooter;
-	position:absolute;
-  	bottom:0;
- 	width:100%;
-  	height:60px;   
-   	background: #F6F7EB;
-   	padding-top:0px;
+.footerContactos{
+	@extend.footerDanes	
 }
