--- a/scss/_mediaqueries.scss
+++ b/scss/_mediaqueries.scss
@@ -1,6 +1,7 @@
 /*MEDIA QUERIES*/
 @media (max-width: 768px) {
-	.iconoFacebook {
+	
+  .iconoFacebook {
   position: fixed;
   display: none;
   width: 50px;
@@ -32,6 +33,7 @@
 
 .nuevoFooter{
   font-size: 25px;
+  width: 100%;
   display: block;
   flex-wrap: wrap;
   flex-flow: row;
@@ -52,10 +54,7 @@
 .banner{
   display: none;
 }
-.calecita{
-  width: 100%;
-  height: 100%;
-}
+
 }
 #footer{
   font-family: 'Noto Sans JP', sans-serif;
@@ -73,19 +72,89 @@
   justify-content: space-evenly;
   align-content: center;
 }
+.boxImg{
+  color: #74A57F;
+font-family: 'Noto Sans JP', sans-serif;
+  width: 100%;
+  display: flex;
+  align-content: center;
+  flex-direction: column;
+  flex-flow: row;
+  margin: 0;
+  position: relative;
+}
+.containerLanding{
+  display: flex;
+  flex-flow: row;
+  flex-direction: column;
+  align-content: center;
+  align-items: center;
 }
 
-// .mapaResponsive{
-//   overflow: hidden;
-//   padding-bottom: 56,25%;
-//   position: relative;
-//   height: 0;
-// }
 
-// .mapaResponsive iframe{
-//   left: 0;
-//   top: 0;
-//   height: 75%;
-//   width: 75%;
-//   position: absolute;}
-// }
+.contenidOverlay{
+  position:absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  color: #74A57F;
+  text-transform: uppercase;
+  font-size: 60px;
+}
+
+.contenidOverlay span{
+  font-size: 24px;
+  display: block;
+
+}
+
+.contenidOverlayDanes{
+  position:absolute;
+  top: 50%;
+  left:50%;
+  transform: translate(-50%, -50%);
+  -ms-transform: translate(-50%, -50%);
+  color: darkgoldenrod;
+  text-transform: uppercase;
+  font-size: 60px;
+}
+
+.overlay{
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 100% !important; 
+  width: 100% !important;
+  opacity: 0;
+  transition: 2s ease;
+  background-color: #010607;
+}
+
+.boxImg:hover .overlay{
+  opacity: 0.9;
+  
+}
+
+.bannerImg{
+  width: 100%;
+  height: auto;
+}
+
+.banner{
+	height: auto;
+	width: 100%;
+	font-family: 'Noto Sans JP', sans-serif;
+	font-size: 30px;
+	background-color: #FFFFCF;
+	color: goldenrod;
+	text-align: center;
+	text-transform: uppercase;
+	padding: 20px;
+	margin-bottom:1px;
+	
+}
+
+}
