--- a/scss/_formularios.scss
+++ b/scss/_formularios.scss
@@ -8,6 +8,7 @@ form input, select, textarea{
 }
 .formContacto{
 	padding-bottom: 20 px;
+	padding-left: 25px;
 }
 #checkBoxLegales label{
 	font-family: 'Mukta', sans-serif;
